# ambra-lang

./: .clang-format  .gitignore  CMakeLists.txt  LANGUAGE_SPEC.md  MANUAL.md  README.md
.cache/clangd/index/: analyzer.cpp.7C413691BA279DAE.idx  ast.cpp.7A6B1FC894C7FBFF.idx  builtins.cpp.41C53AB32AC1272A.idx  compiler_main.cpp.B957315380680928.idx  disassembler.cpp.D0F9EE370DFCF7B2.idx  emitter.cpp.8A80F5F9D461119D.idx  error.cpp.7D7F7433D38B6306.idx  expr.h.46C8F18ACBF9BC6B.idx  lexer.cpp.A2975B8356DB6631.idx  lexer.h.42B96493E6433F9E.idx  lexer_tests.cpp.A5F1D69EB04542D9.idx  parser.cpp.65DFF9A744954ADC.idx  parser.h.1DD6890CBDCBD4BD.idx  parser_tests.cpp.3672BEDB27FD0CF1.idx  prog.h.07708808129A9B83.idx  stmt.h.41A49D8A046AFC43.idx  token.cpp.B916A6E32F474328.idx  token.h.AE65F4F919ABBD40.idx  vm.cpp.3AD4E268648B8BFE.idx  vm_main.cpp.233E5EE528997849.idx  vm_tests.cpp.357072048F4A7BD8.idx
docs/: architecture.md  bytecode_spec.md  parser_design.md
src/ast/: expr.h  prog.h  stmt.h
src/cli/: compiler_main.cpp  vm_main.cpp
src/ir/: functions.h  instructions.h  ir_types.h  lowering.cpp  lowering.h  program.h  types.h  validator.h
src/lexer/: lexer.cpp  lexer.h
src/lexer/token/: token.cpp  token.h
src/parser/: parser.cpp  parser.h
src/sema/: analyzer.cpp  analyzer.h
tests/: CMakeLists.txt  analyzer_tests.cpp  lexer_tests.cpp  lowering_tests.cpp  parser_tests.cpp  resolver_tests.cpp  vm_tests.cpp
